<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PB_ActionManualInventoryOptions</class>
 <widget class="QWidget" name="PB_ActionManualInventoryOptions">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>701</width>
    <height>60</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <property name="spacing">
    <number>0</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QWidget" name="wd_toolbar" native="true">
     <layout class="QVBoxLayout" name="verticalLayout">
      <property name="spacing">
       <number>0</number>
      </property>
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <widget class="QWidget" name="widget" native="true">
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <property name="spacing">
          <number>0</number>
         </property>
         <property name="leftMargin">
          <number>0</number>
         </property>
         <property name="topMargin">
          <number>0</number>
         </property>
         <property name="rightMargin">
          <number>0</number>
         </property>
         <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
          <widget class="QWidget" name="widget_3" native="true">
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <property name="leftMargin">
             <number>9</number>
            </property>
            <property name="topMargin">
             <number>0</number>
            </property>
            <property name="rightMargin">
             <number>9</number>
            </property>
            <property name="bottomMargin">
             <number>0</number>
            </property>
            <item>
             <widget class="QRadioButton" name="rb_select">
              <property name="text">
               <string>Séléction</string>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">bg_mode</string>
              </attribute>
             </widget>
            </item>
            <item>
             <widget class="QRadioButton" name="rb_dbh">
              <property name="text">
               <string>Choix cercle</string>
              </property>
              <property name="checked">
               <bool>true</bool>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">bg_mode</string>
              </attribute>
             </widget>
            </item>
            <item>
             <widget class="QRadioButton" name="rb_attributes">
              <property name="text">
               <string>Saisie attributs</string>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">bg_mode</string>
              </attribute>
             </widget>
            </item>
            <item>
             <widget class="Line" name="line_2">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QPushButton" name="pb_upper">
              <property name="text">
               <string/>
              </property>
              <property name="icon">
               <iconset resource="../../resource.qrc">
                <normaloff>:/icons/upper.png</normaloff>:/icons/upper.png</iconset>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QPushButton" name="pb_lower">
              <property name="text">
               <string/>
              </property>
              <property name="icon">
               <iconset resource="../../resource.qrc">
                <normaloff>:/icons/lower.png</normaloff>:/icons/lower.png</iconset>
              </property>
             </widget>
            </item>
            <item>
             <widget class="Line" name="line_3">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QPushButton" name="pb_toTrash">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="icon">
               <iconset resource="../../resource.qrc">
                <normaloff>:/icons/trash.png</normaloff>:/icons/trash.png</iconset>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QPushButton" name="pb_fromTrash">
              <property name="text">
               <string/>
              </property>
              <property name="icon">
               <iconset resource="../../resource.qrc">
                <normaloff>:/icons/cancelTrash.png</normaloff>:/icons/cancelTrash.png</iconset>
              </property>
             </widget>
            </item>
            <item>
             <widget class="Line" name="line_7">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QPushButton" name="pb_toValidated">
              <property name="text">
               <string/>
              </property>
              <property name="icon">
               <iconset resource="../../resource.qrc">
                <normaloff>:/icons/ok.png</normaloff>:/icons/ok.png</iconset>
              </property>
             </widget>
            </item>
            <item>
             <widget class="Line" name="line">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="cb_centerCamera">
              <property name="text">
               <string>Synchro. Caméra</string>
              </property>
              <property name="checked">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item>
             <spacer name="horizontalSpacer_2">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>40</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
           </layout>
          </widget>
         </item>
         <item>
          <widget class="Line" name="line_5">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QWidget" name="widget_2" native="true">
           <layout class="QHBoxLayout" name="horizontalLayout_3">
            <property name="spacing">
             <number>6</number>
            </property>
            <property name="leftMargin">
             <number>9</number>
            </property>
            <property name="topMargin">
             <number>0</number>
            </property>
            <property name="rightMargin">
             <number>9</number>
            </property>
            <property name="bottomMargin">
             <number>0</number>
            </property>
            <item>
             <widget class="QLabel" name="label_2">
              <property name="font">
               <font>
                <weight>75</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>Cercles :</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="cb_activeCircles">
              <property name="text">
               <string>Actifs</string>
              </property>
              <property name="checked">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="cb_otherCircles">
              <property name="text">
               <string>Autres</string>
              </property>
              <property name="checked">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="cb_trash">
              <property name="text">
               <string>Poubelle</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="Line" name="line_4">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QLabel" name="label">
              <property name="font">
               <font>
                <weight>75</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>Scènes :</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="cb_activeScene">
              <property name="text">
               <string>Active</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="cb_otherScenes">
              <property name="text">
               <string>Autres</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="cb_trashScenes">
              <property name="text">
               <string>Poubelle</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="Line" name="line_6">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="cb_showData">
              <property name="text">
               <string>Attributs</string>
              </property>
             </widget>
            </item>
            <item>
             <spacer name="horizontalSpacer">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>40</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
           </layout>
          </widget>
         </item>
        </layout>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../../resource.qrc"/>
 </resources>
 <connections/>
 <buttongroups>
  <buttongroup name="bg_mode"/>
 </buttongroups>
</ui>
